# meteoschweiz

./: Cargo.toml  README.md
src/: cache.rs  default_config.toml  errors.rs  forecast.rs  main.rs  settings.rs  template.tex.tera  template_long.tex.tera  utils.rs
src/auto/: template_long.tex.el
