[package]
name = "meteoschweiz"
version = "0.1.0"
authors = ["Tibor Schneider <tiborschneider@bluewin.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
thiserror = "1"
tera = "1"
isahc = "0.9"
scraper = "0.12"
http = "0.2"
chrono = "0.4"
itertools = "0.9"
shellexpand = "2"
clap = "2.33.1"
config = "0.10"
lazy_static = "1.4"
dirs = "2.0"